# nibble

./: .gitignore  Cargo.toml  README.md  tests.txt
ppl_results/: README.md
src/: cache.rs  cli.rs  conversation.rs  generation.rs  lib.rs  loader.rs  main.rs  model.rs  quant_linear.rs  quant_q8k_128.rs  repl.rs  scratch.rs  types.rs
