[package]
name = "phi3-mixed-quant"
version = "0.1.0"
edition = "2021"
description = "Mixed Q8K/Q4K quantized inference for Phi-3 Mini 3.8B"
license = "MIT OR Apache-2.0"

[features]
# Default build: permutation code path is NOT compiled in.
# Empirical results (see ppl_results/README.md) show no PPL gain across
# the implemented strategies (blockwise / l2 / svd) and a small throughput
# cost on l2 / svd. Opt in with `--features experimental-perm` to keep
# experimenting with new strategies.
default = []
experimental-perm = []
experimental-q8k128 = []

[dependencies]
candle = { git = "https://github.com/huggingface/candle", package = "candle-core", rev = "3b39794c1" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "3b39794c1" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "3b39794c1" }

safetensors = "0.7"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
half = { version = "2.4", features = ["num-traits"] }
bytemuck = { version = "1", features = ["derive"] }
hf-hub = "0.4.1"
shellexpand = "3"
anyhow = "1.0"
once_cell = "1.19"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"

[lib]
name = "phi3_mixed_quant"
path = "src/lib.rs"

[[bin]]
name = "phi3-mixed-quant"
path = "src/main.rs"

[[bin]]
name = "quantize_q8k"
path = "src/bin/quantize_q8k.rs"

[[bin]]
name = "quantize_q8k128"
path = "src/bin/quantize_q8k128.rs"
required-features = ["experimental-q8k128"]

[[bin]]
name = "pack_q8k_safetensors"
path = "src/bin/pack_q8k_safetensors.rs"

[[bin]]
name = "perplexity"
path = "src/bin/perplexity.rs"
